--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,29 @@
-altair
-certifi
-Flask
-Fortuna
+altair~=5.2.0
+certifi~=2024.2.2
+Flask~=3.0.2
+Fortuna~=5.1.5
 gunicorn
-Jinja2
+Jinja2~=3.1.3
 joblib
-jupyter
-numpy
-MonsterLab
-pandas
-pymongo[srv]
-python-dotenv
+jupyter~=1.0.0
+numpy~=1.26.3
+MonsterLab~=1.2.7
+pandas~=2.2.0
+pymongo[srv]~=4.6.1
+python-dotenv~=1.0.1
 scikit-learn
-scipy
+scipy~=1.12.0
+
+pytest~=8.0.0
+pip~=24.0
+attrs~=23.2.0
+wheel~=0.42.0
+tornado~=6.4
+pytz~=2024.1
+setuptools~=69.0.3
+overrides~=7.7.0
+cffi~=1.16.0
+MarkupSafe~=2.1.5
+python-dateutil~=2.8.2
+six~=1.16.0
+packaging~=23.2
